--- a/index.html
+++ b/index.html
@@ -111,30 +111,33 @@
         </tr>
         <tr>
             <td colspan="3">
-                <ol class="Autre">
+                <ul class="Autre">
                     <li>Autre Films</li>
+                </ul>
                 <ul class="Align3">
-                    <br>
+
                     <li class="Align4">Avengers: Age of Ultron (2015)</li>
                     <li class="Align4">Avengers: Infinity War (2018)</li>
                     <li class="Align4">Avengers: Endgame (2019)</li>
                 </ul>
-                </ol>
+
             </td>
         </tr>
-        <br>
-        <br>
+
         <tr>
             <td colspan="3">
-                <ol class="Autre">
+                <ul class="Autre">
                     <li>Source</li>
-                <ul class="Align3">
-                    <br>
-                    <li class="Align4"><a href="https://fr.wikipedia.org/wiki/Avengers_(film)" target="_blank">Source</a></li>
-                    <li class="Align4"><a href="https://www.imdb.com/title/tt0848228/plotsummary/?ref_=tt_stry_pl" target="_blank">IMDB</a></li>
-                    
                 </ul>
-                </ol>
+                <ul class="Align3">
+
+                    <li class="Align4"><a href="https://fr.wikipedia.org/wiki/Avengers_(film)"
+                            target="_blank">Source</a></li>
+                    <li class="Align4"><a href="https://www.imdb.com/title/tt0848228/plotsummary/?ref_=tt_stry_pl"
+                            target="_blank">IMDB</a></li>
+
+                </ul>
+
             </td>
         </tr>
     </table>
