--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="Stylesheet" href="/css/styles.css">
+    <link rel="Stylesheet" href="css/styles.css">
     <title>TP1</title>
 </head>
 
