--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 </ul>
                 <ul class="Align3">
 
-                    <a href="https://en.wikipedia.org/wiki/Avengers:_Age_of_Ultron"><li class="Align4">Avengers: Age of Ultron (2015)</li></a>
-                    <a href="https://en.wikipedia.org/wiki/Avengers:_Infinity_War"><li class="Align4">Avengers: Infinity War (2018)</li></a>
-                    <a href="https://en.wikipedia.org/wiki/Avengers:_Endgame"><li class="Align4">Avengers: Endgame (2019)</li></a>
+                    <a href="https://en.wikipedia.org/wiki/Avengers:_Age_of_Ultron" target="_blank"><li class="Align4">Avengers: Age of Ultron (2015)</li></a>
+                    <a href="https://en.wikipedia.org/wiki/Avengers:_Infinity_War" target="_blank"><li class="Align4">Avengers: Infinity War (2018)</li></a>
+                    <a href="https://en.wikipedia.org/wiki/Avengers:_Endgame" target="_blank"><li class="Align4">Avengers: Endgame (2019)</li></a>
                 </ul>
 
             </td>
